--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.firebase.auth
     implementation 'com.google.firebase:firebase-auth:23.0.0'
-    implementation libs.firebase.database
+    implementation 'com.google.firebase:firebase-database:20.1.0'
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
