--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.NutriWatch4"
         tools:targetApi="31">
         <activity
+            android:name=".centro_not"
+            android:exported="false" />
+        <activity
+            android:name=".control_salud"
+            android:exported="false" />
+        <activity
             android:name=".seguimiento_al"
             android:exported="false" />
         <activity
