--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 18 09:08:48 CST 2024
-sdk.dir=C\:\\Users\\valen\\AppData\\Local\\Android\\Sdk
+#Thu Jul 18 10:16:04 CST 2024
+sdk.dir=/Users/UTP1/Library/Android/sdk
