--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,12 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NutriWatch4"
         tools:targetApi="31">
+
         <activity
             android:name=".recomendaciones_ej"
             android:exported="false" />
-        <activity
-            android:name=".centro_not"
-            android:exported="false" />
+
         <activity
             android:name=".control_salud"
             android:exported="false" />
@@ -30,9 +30,7 @@
         <activity
             android:name=".Notification"
             android:exported="false" />
-        <activity
-            android:name=".Confirm_Register"
-            android:exported="false" />
+
         <activity
             android:name=".register"
             android:exported="false" />
@@ -48,6 +46,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".ReminderBroadcastReceiver" />
+
     </application>
 
 </manifest>
