--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 18 12:02:12 CST 2024
-sdk.dir=C\:\\Users\\david\\AppData\\Local\\Android\\Sdk
+#Tue Aug 06 22:07:48 CST 2024
+sdk.dir=C\:\\Users\\Luiss\\AppData\\Local\\Android\\Sdk
