--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 07 11:52:19 CST 2024
-sdk.dir=/Users/UTP1/Library/Android/sdk
+#Thu Aug 08 10:34:14 CST 2024
+sdk.dir=C\:\\Users\\david\\AppData\\Local\\Android\\Sdk
