--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 08 10:34:14 CST 2024
-sdk.dir=C\:\\Users\\david\\AppData\\Local\\Android\\Sdk
+#Mon Aug 12 09:46:06 CST 2024
+sdk.dir=/Users/macutp/Library/Android/sdk
