--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 10 23:13:49 CST 2024
-sdk.dir=C\:\\Users\\Luiss\\AppData\\Local\\Android\\Sdk
+#Tue Aug 13 12:05:42 CST 2024
+sdk.dir=/Users/macutp/Library/Android/sdk
